--- a/styles/global.css
+++ b/styles/global.css
@@ -5,8 +5,8 @@
   box-sizing: border-box;
 }
 
-/* variaveis de cor */
 :root {
+  /* variaveis de cor */
   --brand-color: #EF5F4C;
   --background-color: #FFFFFF;
   --surface-color: #F5F5F5;
@@ -14,9 +14,17 @@
   --shape-transparency: #ffffff91;
   --text-color-primary: #313131;
   --text-color-secondary: #6C6C6C;
+ 
+  /* variaveis de fonts */
+  --font-family: "Poppins", sans-serif;
+  --text-lg: bold 32px/125% var(--font-family);
+  --text: 16px/1.5 var(--font-family);
+  --text-md: 14px/170% var(--font-family);
+  --text-sm: 12px/170% var(--font-family);
 }
 
 body {
+  font: var(--text);
   color: var(--text-color-secondary);
   background-color: var(--background-color);
 }
