--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,9 @@
 footer {
   display: flex;
   gap: 24px; /* espaçamento entre os elementos filhos */
-  padding-block: 24px; /* espaçamento vertical */;
+  padding-block: 24px; /* espaçamento vertical */
+  
+  font: 14px/150% var(--font-family);
 }
 
 footer span:nth-child(1) { /* numero do filho (da cx footer) */
